Okay na overlay vR0

--- a/html/home.html
+++ b/html/home.html
@@ -19,9 +19,12 @@
         <section class="right">
             <a href="#" class="navButton"> About</a>
             <a href="#" class="navButton"> Pictures </a>
-            <a href="#" class="navButton">Login</a>
+            <button class="button">Login</button>
         </section>
     </nav>
+    <div>
+
+    </div>
 
 
 </body>
